src/components/wallet/walletDetails.css
@import '../app/variablesV2.css';
@import '../app/mixins.css';

.wrapper {
  & .row {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;

    & > * {
      margin-right: 15px;
      margin-left: -2px;
    }
  }

  & label {
    @mixin contentNormal;

    color: var(--color-slate-gray);
    margin-bottom: 5px;
    display: block;
  }

  & .value {
    @mixin headingNormal bold;

    color: var(--color-maastricht-blue);
    word-break: break-all;
    margin-bottom: -4px;
  }
}

